+ Version 1.0.2; 2023-04-18
- The pupnet.conf file upgraded to version 1.3.0
- Now builds using .NET6, rather than .NET7 (you can change this in csproj file if needed)

+ Version 1.0.1; 2023-03-26
- Programs now asks for key-press only on Windows
- Reports version correctly as 1.0.1

+ Version 1.0.0; 2023-03-22
- Initial release
- Reports version as "3.2.1". This was intentional at the time by way of demonstration.