@@ -21,7 +21,7 @@ AppId = zone.kuiper.helloworld
 # brackets to denote package release, i.e. '1.2.3[1]'. Release refers to a change to the deployment
 # package, rather the application. If release part is absent (i.e. '1.2.3'), the release value defaults
 # to '1'. Note that the version-release value given here may be overridden from the command line.
-AppVersionRelease = 1.0.1[3]
+AppVersionRelease = 1.0.2[1]
 
 # Mandatory single line application description.
 AppShortSummary = A Hello World application
@@ -119,7 +119,7 @@ IconFiles = """
 # file, or the directory containing it. If empty (default), a single project or solution file is
 # expected under the same directory as this file. IMPORTANT. If set to 'NONE', dotnet publish
 # is disabled (not called). Instead, only DotnetPostPublish is called.
-DotnetProjectPath = 
+DotnetProjectPath =
 
 # Optional arguments supplied to 'dotnet publish'. Do NOT include '-r' (runtime), app version, or '-c'
 # (configuration) here as they will be added (i.e. via AppVersionRelease). Typically you want as a
@@ -163,7 +163,7 @@ OutputDirectory = Deploy/bin
 ########################################
 
 # Additional arguments for use with appimagetool. Useful for signing. Default is empty.
-AppImageArgs = 
+AppImageArgs =
 
 # Boolean (true or false) which sets whether to include the application version in the AppImage filename,
 # i.e. 'HelloWorld-1.2.3-x86_64.AppImage'. Default is false. It is ignored if the output filename is
@@ -199,7 +199,7 @@ FlatpakFinishArgs = """
 
 # Additional arguments for use with flatpak-builder. Useful for signing. Default is empty.
 # See flatpak-builder --help.
-FlatpakBuilderArgs = 
+FlatpakBuilderArgs =
 
 ########################################
 # RPM OPTIONS
@@ -267,12 +267,12 @@ SetupMinWindowsVersion = 10
 # Optional name and parameters of the Sign Tool to be used to digitally sign: the installer,
 # uninstaller, and contained exe and dll files. If empty, files will not be signed.
 # See: https://jrsoftware.org/ishelp/topic_setup_signtool.htm
-SetupSignTool = 
+SetupSignTool =
 
 # Optional suffix for the installer output filename. The default is empty, but you may wish set it to:
 # 'Setup' or similar. This, for example, will output a file of name: HelloWorldSetup-x86_64.exe
 # Ignored if the output filename is specified at command line.
-SetupSuffixOutput = 
+SetupSuffixOutput =
 
 # Boolean (true or false) which sets whether to include the application version in the setup filename,
 # i.e. 'HelloWorld-1.2.3-x86_64.exe'. Default is false. Ignored if the output filename is specified
